2004-12-01    Ping Cheng <pingc@wacom.com>
	* Removed src/2.6.x/Makefile.am to build .ko locally (Jens Georg)
	* Updated src/2.6.x/Makefile.in (Jens Georg)
	* Added support for kernel 2.6.10
	* Fixed a P4 bug in wcmSerial.c
	* Added wacom.man to dev
	* Released 0.6.6
	* Updated web pages

2004-11-05    Ping Cheng <pingc@wacom.com>
	* Updated configure script  Kristian Høgsberg <krh@redhat.com>
	* Removed XFree86v3 support
	* Cleaned wacom.c files
	* Released 0.6.5 as beta

2004-11-02    Ping Cheng <pingc@wacom.com>
	* Added subdirs for each kernel 2.6.x
	* Updated web scripts

2004-10-15    Ping Cheng <pingc@wacom.com>
	* Fixed Intuos3 pressure bug

2004-10-06    Ping Cheng <pingc@wacom.com>
	* Added Intuos3 support
	* Fixed z-rot valuator initialization error

2004-08-06    Ping Cheng <pingc@wacom.com>
	* Fixed USB tablet protocol V dual input for kernel 2.6
	* Updated wacusb.c to fix wacdump ParseData error
	* Fixed speed and acceleration bug
	* Released version 0.6.4

2004-06-04    Ping Cheng <pingc@wacom.com>
	* Updated configure.in for option verification
	* Removed XFree86/xorg.conf 3.x code
	* Fixed XF86Config multi-word identifier issue
	* Fixed warnings in X.org 6.7.0

2004-05-24    Ping Cheng <pingc@wacom.com>
        * Merged changes from 2.6.6 kernel Dan Bullok <dan.devel@bullok.com>
	* Support protocol V dual input for both serial and USB
	* Fixed wacomcpl-exec Feel window bug
	* Released version 0.6.3

2004-05-18    Ping Cheng <pingc@wacom.com>
	* Fixed Relative Speed bug
	* Added a workaround for TPCButton to deal with XFree86 button
	  bug (occasionally unreleased left click when simultaneously
	  pressed with another button)

2004-05-14    Ping Cheng <pingc@wacom.com>
	* Removed DoubleSpeed and DoubleRadius options (use system default instead)
	* Fixed tool on tablet when driver starts issue
	* Updated wacomcpl and webpages
	* Added MODVER string to default option in configure.in

2004-04-02    Ping Cheng <pingc@wacom.com>